@@ -380,7 +380,13 @@ class SimpleLDAPObject:
         The amount of search results retrieved can be limited with the
         sizelimit parameter if non-zero.
     """
-    return self._ldap_call(self._l.search_ext,base,scope,filterstr,attrlist,attrsonly,timeout,sizelimit)
+    return self._ldap_call(
+      self._l.search_ext,
+      base,scope,filterstr,
+      attrlist,attrsonly,
+      serverctrls,clientctrls,
+      timeout,sizelimit
+    )
 
   def search_ext_s(self,base,scope,filterstr='(objectClass=*)',attrlist=None,attrsonly=0,serverctrls=None,clientctrls=None,timeout=-1,sizelimit=0):
     msgid = self._ldap_call(self._l.search_ext,base,scope,filterstr,attrlist,attrsonly,serverctrls,clientctrls,timeout,sizelimit)
